# EcoBaseBy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EcoBaseBy.sln  Ecology_new.sln  README.md  passdat(backup 4k).db  passdat(backup) 4K.db  passdat(backup).db  passdat(backup)4K.db  passdat.db
3rd/: CMakeLists.txt
CMake/windows-default/EcoBaseBy/: config.cfg  db.backup  passport_data.db
CMake/windows-release/EcoBaseBy/: passport_data.db
EcoBaseBy/: Add_panel.cpp  Add_panel.h  CustomAutoComplete.cpp  CustomCheckBox.h  CustomCodeValidator.cpp  CustomCodeValidator.h  CustomEvents.h  DBMain.cpp  DB_Table.cpp  DB_Table.h  Dialog_ListColumnSelect.cpp  Dialog_OrgAddEdit.cpp  Dialog_ask.cpp  Dialog_ask.h  Dialog_cMainListEdit.cpp  Dialog_cMainListEdit.h  Ecology_new.cpp  Ecology_new.vcxproj  Ecology_new.vcxproj.filters  MainMenuTabButton.cpp  Makefile  MaterialButton.cpp  MyBusyInfo.cpp  MyScrolledWindow.cpp  PDF_Journal.cpp  PDF_Pod10.cpp  PDF_Pod10.h  RCb07520  RCb17664  Settings.cpp  Settings_page.cpp  Settings_page.h  TransparentPanel.cpp  VirtualCodeList.h  VirtualListCtrl.h  VirtualOrgList.h  cApp.cpp  cMain.cpp  config.cfg  cpp.hint  (+9 more)
Ecology_new/: Add_panel.cpp  Add_panel.h  ColSelectDialog.cpp  ColSelectDialog.h  CustomAutoComplete.h  CustomCheckBox.cpp  CustomEvents.cpp  CustomEvents.h  DBMain.cpp  DBMain.h  DMColumnEnums.h  Dialog_ListColumnSelect.cpp  Dialog_ListColumnSelect.h  Dialog_OrgAddEdit.cpp  Dialog_OrgAddEdit.h  Dialog_askDeleteEntry.cpp  Dialog_askDeleteEntry.h  Dialog_cMainListEdit.cpp  Dialog_cMainListEdit.h  Ecology_new.rc  Ecology_new.vcxproj  Ecology_new.vcxproj.filters  GUI_parameters.h  Global variables.h  MainMenuTabButton.cpp  MainMenuTabButton.h  MaterialButton.cpp  MaterialButton.h  MyScrolledWindow.h  PDF_Helper.cpp  PDF_Helper.h  PDF_Journal.cpp  PDF_Journal.h  PDF_Main.cpp  PDF_Main.h  PDF_Pod10.cpp  PDF_Pod10.h  PDF_Pod9.cpp  PDF_Pod9.h  Resource.h  (+34 more)
libs/wxpdfdoc-1.0.1/lib/vc_lib/: wxpdfdocd.idb
libs/wxsqlite3-4.7.4/lib/vc_lib/: wxsqlite3d.idb
resource/: CMakeLists.txt  EcoBaseBy.rc
src/: CMakeLists.txt  EcoBaseByConfig.h  EcoBaseByConfig.h.in  GUI_parameters.h  Settings.cpp  Settings.h  Structs.h
src/Controls/: CustomCheckBox.cpp  CustomCheckBox.h  MainMenuTabButton.cpp  MainMenuTabButton.h  MaterialButton.cpp  MaterialButton.h  VirtualCodeList.cpp  VirtualCodeList.h  VirtualEntryDateList.cpp  VirtualEntryDateList.h  VirtualListCtrl.cpp  VirtualListCtrl.h  VirtualOrgList.cpp  VirtualOrgList.h  VirtualStrgInitList.cpp  VirtualStrgInitList.h  myDirPicker.cpp  myDirPicker.h  myGridTable.cpp  myGridTable.h  myGridTableData.h
src/Database/: DBMain.cpp  DBMain.h
src/Frames/: Add_panel.cpp  Add_panel.h  Dialog_ListColumnSelect.cpp  Dialog_ListColumnSelect.h  Dialog_OrgAddEdit.cpp  Dialog_OrgAddEdit.h  Dialog_ask.cpp  Dialog_ask.h  Dialog_cMainListEdit.cpp  Dialog_cMainListEdit.h  Dialog_generic.cpp  Dialog_generic.h  MyBusyInfo.cpp  MyBusyInfo.h  Settings_page.cpp  Settings_page.h  cApp.cpp  cMain.cpp  cMain.h
src/PDF/: PDF_Helper.cpp  PDF_Helper.h  PDF_Journal.cpp  PDF_Journal.h  PDF_Main.cpp  PDF_Main.h  PDF_Pod10.cpp  PDF_Pod10.h  PDF_Pod9.cpp  PDF_Pod9.h
src/Utility/: BackupDbTimer.cpp  BackupDbTimer.h  CustomAutoComplete.h  CustomCodeValidator.h  Utility.cpp  Utility.h
