
option(USE_STATIC_LIBS "use libraries as static(you should either use all static or all shared)" ON)
if(WIN32)
set(wxWidgets_ROOT_DIR $ENV{WXWIN})
	if(USE_STATIC_LIBS)
		add_library(wxSQLite3Lib STATIC IMPORTED)
		add_library(wxPDFDocLib STATIC IMPORTED)
		set(wxWidgets_LIB_DIR $ENV{WXWIN}/lib/vc_lib)

		if(CMAKE_BUILD_TYPE STREQUAL "Debug")
			set(wxWidgets_CONFIGURATION mswud)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_lib/wxsqlite3d.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_lib/wxpdfdocd.lib")
		else()
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_lib/wxsqlite3.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_lib/wxpdfdoc.lib")
			set(wxWidgets_CONFIGURATION mswu)
		endif()
	else()
		add_library(wxSQLite3Lib SHARED IMPORTED)
		add_library(wxPDFDocLib SHARED IMPORTED)
		set(wxWidgets_LIB_DIR $ENV{WXWIN}/lib/vc_dll)

		if(CMAKE_BUILD_TYPE STREQUAL "Debug")
			set(wxWidgets_CONFIGURATION mswud)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_dll/wxsqlite3d.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_dll/wxpdfdocd.lib")
		else()
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_dll/wxsqlite3.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_dll/wxpdfdoc.lib")
			set(wxWidgets_CONFIGURATION mswu)
		endif()
	endif()
elseif(UNIX)
	set(wxWidgets_USE_UNICODE ON)
	if(USE_STATIC_LIBS)
		set(wxWidgets_USE_STATIC ON)
		add_library(wxSQLite3Lib STATIC IMPORTED)
		add_library(wxPDFDocLib STATIC IMPORTED)
		if(CMAKE_BUILD_TYPE EQUAL Debug)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/gcc_lib/libwxsqlite3d.a")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/gcc_lib/libwxpdfdocd.a")
		else()
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/gcc_lib/libwxsqlite3.a")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/gcc_lib/libwxpdfdoc.a")
		endif()
	else()
		add_library(wxSQLite3Lib SHARED IMPORTED)
		add_library(wxPDFDocLib SHARED IMPORTED)
		set(wxWidgets_USE_STATIC OFF)
		if(CMAKE_BUILD_TYPE EQUAL Debug)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/gcc_dll/libwxsqlite3d.a")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/gcc_dll/libwxpdfdocd.a")
		else()
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/gcc_dll/libwxsqlite3.a")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/gcc_dlllibwxpdfdoc.a")
		endif()
	endif()
endif()
find_package(wxWidgets REQUIRED core base net xml html qa xrc gl aui propgrid ribbon scintilla richtext media stc webview)
include(${wxWidgets_USE_FILE})

include_directories(PRIVATE ${wxWidgets_INCLUDE_DIRS} 
						${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/include 
						${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/include)
foreach(LANG C CXX RC)
    set(CMAKE_${LANG}_STANDARD_INCLUDE_DIRECTORIES ${CUSTOM_INCLUDE_DIRECTORIES})
endforeach()
