
set(wxPDFDocLibLoc "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib")
set(wxSQLite3LibLoc "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib")
set(wxWidgetsDllVerPrefix "314")
set(wxWidgetsVendor "custom")


find_package(wxWidgets REQUIRED COMPONENTS core base xml net html qa xrc aui propgrid ribbon richtext stc OPTIONAL_COMPONENTS webview gl media scintilla)
add_library(wxWidgets INTERFACE)
set(wxWidgets_USE_UNICODE ON)
if(WIN32)
	get_filename_component(WXDLLSUFFIX "${wxWidgets_LIB_DIR}" NAME)
	if(WXDLLSUFFIX MATCHES "_dll$")
		add_library(wxSQLite3Lib SHARED IMPORTED)
		add_library(wxPDFDocLib SHARED IMPORTED)
		set(wxWidgets_DEFINITIONS WXUSINGDLL)
		set(wxWidgets_LIB_DIR "$ENV{WXWIN}/lib/vc_dll")
		set(wxWidgets_LIB_DIR "$ENV{WXWIN}/lib/vc_dll" CACHE PATH "wxWidgets_LIB_DIR")
		set(wxWidgets_USE_STATIC OFF)
		message("USING SHARED")
		if(CMAKE_BUILD_TYPE STREQUAL "Debug")
			set(wxWidgets_CONFIGURATION mswud)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${wxSQLite3LibLoc}/vc_dll/wxsqlite3d.dll")
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_IMPLIB "${wxSQLite3LibLoc}/vc_dll/wxsqlite3d.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${wxPDFDocLibLoc}/vc_dll/wxpdfdocd.dll")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_IMPLIB "${wxPDFDocLibLoc}/vc_dll/wxpdfdocd.lib")
			configure_file(${wxPDFDocLibLoc}/vc_dll/wxpdfdocd.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxSQLite3LibLoc}/vc_dll/wxsqlite3d.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}ud_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}ud_xml_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxmsw${wxWidgetsDllVerPrefix}ud_core_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			install(FILES ${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}ud_vc_${wxWidgetsVendor}.dll
						  ${wxWidgets_LIB_DIR}/wxmsw${wxWidgetsDllVerPrefix}ud_core_vc_${wxWidgetsVendor}.dll
						  ${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}ud_xml_vc_${wxWidgetsVendor}.dll
						  ${wxSQLite3LibLoc}/vc_dll/wxsqlite3d.dll
						  ${wxPDFDocLibLoc}/vc_dll/wxpdfdocd.dll
						  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		else()
			set(wxWidgets_CONFIGURATION mswu)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${wxSQLite3LibLoc}/vc_dll/wxsqlite3.dll")
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_IMPLIB "${wxSQLite3LibLoc}/vc_dll/wxsqlite3.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${wxPDFDocLibLoc}/vc_dll/wxpdfdoc.dll")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_IMPLIB "${wxPDFDocLibLoc}/vc_dll/wxpdfdoc.lib")
			configure_file(${wxPDFDocLibLoc}/vc_dll/wxpdfdoc.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxSQLite3LibLoc}/vc_dll/wxsqlite3.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}u_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}u_xml_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			configure_file(${wxWidgets_LIB_DIR}/wxmsw${wxWidgetsDllVerPrefix}u_core_vc_${wxWidgetsVendor}.dll ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
			install(FILES ${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}u_vc_${wxWidgetsVendor}.dll
						  ${wxWidgets_LIB_DIR}/wxmsw${wxWidgetsDllVerPrefix}u_core_vc_${wxWidgetsVendor}.dll
						  ${wxWidgets_LIB_DIR}/wxbase${wxWidgetsDllVerPrefix}u_xml_vc_${wxWidgetsVendor}.dll
						  ${wxSQLite3LibLoc}/vc_dll/wxsqlite3.dll
						  ${wxPDFDocLibLoc}/vc_dll/wxpdfdoc.dll
						  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
		endif()
	else()
		add_library(wxSQLite3Lib STATIC IMPORTED)
		add_library(wxPDFDocLib STATIC IMPORTED)
		set(wxWidgets_LIB_DIR $ENV{WXWIN}/lib/vc_lib)
		set(wxWidgets_USE_STATIC ON)
		if(CMAKE_BUILD_TYPE STREQUAL "Debug")
			set(wxWidgets_CONFIGURATION mswud)
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_lib/wxsqlite3d.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_lib/wxpdfdocd.lib")
		else()
			set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/lib/vc_lib/wxsqlite3.lib")
			set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/vc_lib/wxpdfdoc.lib")
			set(wxWidgets_CONFIGURATION mswu)
		endif()
	endif()
elseif(UNIX)
	set(wxPDFLibName "wxcode_gtk2u_pdfdoc-3.1")
	set(wxSQLiteLibName "wxcode_gtk2u_wxsqlite3-3.1")
	find_library(wxpdflib ${wxPDFLibName} REQUIRED)
	find_library(wxsqlitelib ${wxSQLiteLibName} REQUIRED)
	set(wxWidgets_USE_STATIC ON)
	set(wxWidgets_USE_DEBIG OFF)
	add_library(wxSQLite3Lib STATIC IMPORTED)
	add_library(wxPDFDocLib STATIC IMPORTED)
	set_property(TARGET wxSQLite3Lib PROPERTY IMPORTED_LOCATION ${wxsqlitelib})
	set_property(TARGET wxPDFDocLib PROPERTY IMPORTED_LOCATION ${wxpdflib})
endif()



target_include_directories(wxWidgets SYSTEM INTERFACE ${wxWidgets_INCLUDE_DIRS})
target_link_libraries(wxWidgets INTERFACE ${wxWidgets_LIBRARIES})
target_compile_options(wxWidgets INTERFACE ${wxWidgets_CXX_FLAGS})
target_compile_definitions(wxWidgets INTERFACE ${wxWidgets_DEFINITIONS})
target_include_directories(wxPDFDocLib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/include")
target_include_directories(wxSQLite3Lib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxsqlite3/include")
target_link_directories(wxPDFDocLib INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/3rd/wxpdfdoc/lib/fonts")