set(MAIN_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resource/EcoIcon.ico")
set(PASSPORT_DB_FILE "${CMAKE_CURRENT_SOURCE_DIR}/resource/passport_data.db")
set(HYPH_PAT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/resource/hyph-ru.pat.txt")
set(FONTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/resource/Fonts")


configure_file(${HYPH_PAT_FILE} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(${PASSPORT_DB_FILE}  ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(${MAIN_ICON}  ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
file(COPY ${FONTS_DIR} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


install(FILES ${HYPH_PAT_FILE} ${PASSPORT_DB_FILE} ${MAIN_ICON} DESTINATION .)
install(DIRECTORY ${FONTS_DIR} DESTINATION .)
